--- a/css/style.css
+++ b/css/style.css
@@ -14,14 +14,20 @@ body {
 
 .preview {
   box-sizing: border-box;
+  display: inline-block;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
   margin: 1% 0;
   width: 100%;
+  height: 300px;
 }
 
 img {
   width: 100%;
-  height: 300px;
   padding-bottom: 4%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h1 {
@@ -43,27 +49,49 @@ h2 {
 
 .baku {
   box-sizing: border-box;
-  background-image: url("baku.jpg");
+  background-image: url("../images/baku.jpg");
   width: 100%;
   text-align: left;
 }
 
 .london {
   box-sizing: border-box;
-  background-image: url("london.png");
+  background-image: url("../images/london.png");
   width: 100%;
 }
 
 .madrid {
   box-sizing: border-box;
-  background-image: url("madrid.jpg");
+  background-image: url("../images/madrid.jpg");
   width: 100%;
   font-size: 1em;
 }
 
 .rome {
   box-sizing: border-box;
-  background-image: url("rome.jpg");
+  background-image: url("../images/rome.jpg");
   width: 100%;
   font-size: 1em;
+}
+
+@media screen and (min-width: 575px){
+  .preview {
+    padding-left: 5%;
+    background-repeat: no-repeat;
+    margin: 1% 0;
+    width: 48%;
+    height: 200px;
+    display: inline-block;
+  }
+}
+
+@media screen and (min-width: 991px){
+  .preview {
+    padding-left: 5%;
+    background-repeat: no-repeat;
+    box-sizing: border-box;
+    margin: 1% 0;
+    width: 20%;
+    height: 200px;
+    display: inline-block;
 }
