--- a/css/style.css
+++ b/css/style.css
@@ -76,9 +76,8 @@ h2 {
 
 @media screen and (min-width: 575px){
   .preview {
-    padding-left: 5%;
     background-repeat: no-repeat;
-    margin: 1% 0;
+    margin: 1% 0 0 1.3%;
     width: 48%;
     height: 200px;
     display: inline-block;
@@ -90,7 +89,7 @@ h2 {
     padding-left: 5%;
     background-repeat: no-repeat;
     box-sizing: border-box;
-    margin: 1% 0;
+    margin: 1% 0 0 3.8%;
     width: 20%;
     height: 200px;
     display: inline-block;
