--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 .preview {
   box-sizing: border-box;
   display: inline-block;
-  background-size: 100% 100%;
+  background-size: cover;
   background-repeat: no-repeat;
   margin: 1% 0;
   width: 100%;
